--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "classnames": "2.2.6",
     "react": "17.0.1",
+    "react-confetti": "6.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "react-use": "17.1.1"
   },
   "devDependencies": {
     "typescript": "4.1.3"
